--- a/package.json
+++ b/package.json
@@ -14,28 +14,33 @@
   "dependencies": {
     "@angular/animations": "^5.2.2",
     "@angular/cdk": "^5.1.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/forms": "^5.2.2",
+    "@angular/http": "^5.2.2",
     "@angular/material": "^5.1.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "angularfire2": "^5.0.0-rc.4",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/router": "^5.2.2",
+    "angularfire2": "^5.0.0-rc.5-next",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "datatables.net-dt": "^1.10.16",
     "firebase": "^4.9.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "tether": "^1.4.3"
   },
   "devDependencies": {
     "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
+    "@angular/compiler-cli": "^5.2.2",
+    "@angular/language-service": "^5.2.2",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
