--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.2",
-    "@angular/cdk": "^5.1.0",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "^5.2.2",
     "@angular/compiler": "^5.2.2",
     "@angular/core": "^5.2.2",
     "@angular/forms": "^5.2.2",
     "@angular/http": "^5.2.2",
-    "@angular/material": "^5.1.0",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^5.2.2",
     "@angular/platform-browser-dynamic": "^5.2.2",
     "@angular/router": "^5.2.2",
@@ -33,8 +33,10 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "tether": "^1.4.3",
     "zone.js": "^0.8.19",
-    "tether": "^1.4.3"
+    "glyphicons-css": "^1.1.0",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/cli": "1.6.5",
